--- a/finances/templates/finances/sberbank.html
+++ b/finances/templates/finances/sberbank.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-    <a href="#" class="btn btn-xs btn-outline btn-primary" id="pay-button">
+    <a href="#" class="btn btn-primary" id="pay-button">
         {% trans 'pay' %} {{ order.price }}
     </a>
     <div id="message" class="alert alert-success"></div>
