--- a/billing/templates/emails/sign.html
+++ b/billing/templates/emails/sign.html
@@ -2,7 +2,8 @@
 {% blocktrans %}
     <p>Yours faithfully,<br>
         Technical support 'Maxibooking'</p>
-
-    <p>E-mail: support@maxi-booking.com<br>
-       Knowledge base: https://support.maxi-booking.com</p>
+    <p>
+        E-mail: <a href="mailto:support@maxi-booking.com">support@maxi-booking.com</a><br>
+        Knowledge base: <a href="https://support.maxi-booking.com">https://support.maxi-booking.com</a>
+    </p>
 {% endblocktrans %}
