add small fixes for the testes

--- a/billing/templates/emails/registration.html
+++ b/billing/templates/emails/registration.html
@@ -17,6 +17,10 @@
         <li>password: {{ password }}</li>
     </ul>
 
+    <p>Meet your website from Maxi Booking!</p>
+    <p>
+        <a href="{{ website }}" class="btn-primary" itemprop="url" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 0px; text-transform: capitalize; background-color: #ff4632; margin: 0; border-color: #ff4632; border-style: solid; border-width: 10px 20px;">go to your website</a>
+    </p>
     <p>Knowledge base for work in the program: https://support.maxi-booking.com</p>
     <p>You can get support by contacting: support@maxi-booking.com</p>
 
