--- a/finances/templates/finances/paypal.html
+++ b/finances/templates/finances/paypal.html
@@ -62,6 +62,7 @@
                             },
                             /* description: 'The payment transaction description.', */
                             /* invoice_number: '{{ order.id }}' */
+                            custom: '{{ order.id}}'
                         }
                         ]
                     }
