switch the paypal system to production mode

--- a/finances/templates/finances/paypal.html
+++ b/finances/templates/finances/paypal.html
@@ -21,7 +21,8 @@
     <script>
         paypal.Button.render({
             // Set your environment
-            env: 'sandbox', // sandbox | production
+            // env: 'sandbox', 
+            env: 'production', // sandbox | production
 
             // Specify the style of the button
             style: {
