--- a/billing/static/css/admin/main.less
+++ b/billing/static/css/admin/main.less
@@ -97,6 +97,23 @@ input[type="tel"]:focus {
     .ui-tabs-nav li.ui-tabs-selected a
     {
         background-color: #79aec8 !important; 
+        color: #212121 !important;
+    }
+    .ui-tabs-nav .ui-state-default:hover
+    {
+        background-color: #e0e0e0 !important; 
+    }
+    .ui-tabs-nav .ui-state-default:hover a
+    {
+        color: #212121 !important;
+    }
+    .ui-tabs-nav .ui-state-default
+    {
+        background-color: #e6e6e6 !important; 
+        color: #555555 !important;
+    }
+    .ui-tabs-nav .ui-state-default a {
+        color: #555555 !important;
     }
     .ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr {
         border-radius: 0px;
