add quick fix to transaltion messages

--- a/billing/templates/emails/registration.html
+++ b/billing/templates/emails/registration.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 {% blocktrans %}
-    <p>Hello, {{ name }}!</p>
+    <p>Hello!</p>
     <p>Thank you for registering in 'Maxibooking'!</p>
     <p>To enter the program, please follow the link: {{ url }}
         and use the user's credentials:</p>
