add tests for the sberbank-rest payment system

--- a/billing/templates/billing/payment_successful.html
+++ b/billing/templates/billing/payment_successful.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="alert alert-success">{% trans 'Your payment has been successfully completed.' %}</div>
+    <div class="alert alert-success">{% trans "Your payment was successful" %}</div>
 </body>
 
 </html>
