remove the client name from all the emails

--- a/billing/templates/emails/client_welcome.html
+++ b/billing/templates/emails/client_welcome.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     {% blocktrans with name=client.name %}
-        <p>Hello, {{ name }}!</p>
+        <p>Hello!</p>
         <p>How are your sales?</p>
         <p>In Maxibooking, we are always happy to help you set up the features, prices and special offers you need, and individually adjust the number of rooms offered for sale for each individual sales channel (Your website, Booking.com et al.)</p>
         <p>Write to us. We are happy only if with us you sell more!</p>
