--- a/billing/templates/emails/order_paid.html
+++ b/billing/templates/emails/order_paid.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 {% blocktrans with id=order_id created=created name=name %}
-    <p>Hello, {{ name }}!</p>
+    <p>Hello!</p>
     <p>Thank you for payment!</p>
     <p>Order #{{ id }} from {{ created }} was paid.</p>
 {% endblocktrans %}
