--- a/billing/templates/emails/order_payment_notification.html
+++ b/billing/templates/emails/order_payment_notification.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 {% blocktrans with name=client.name id=order.id greetings_new=greetings_new|safe created=order.created|date:'d.m.Y' expired=order.expired_date|date:'d.m.Y H:i' url=client.url %}
-    <p>Hello, {{ name }}!</p>
+    <p>Hello!</p>
 
     {{ greetings_new }}
 
