update all the translations of emails

--- a/billing/templates/emails/base_manager.html
+++ b/billing/templates/emails/base_manager.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans "Message from billing" %}
+    {% trans "Action required" %}
 {% endblock %}
 
 {% block content %}
