--- a/billing/templates/emails/client_disabled.html
+++ b/billing/templates/emails/client_disabled.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans "we miss you!" %}
+    {% trans "we miss You!" %}
 {% endblock %}
 
 {% block content %}
@@ -11,9 +11,9 @@
 {% blocktrans with name=client.name id=order.id created=order.created|date:'d.m.Y' url=client.url %}
 
 <p>Hello!</p>
-<p>New sales are waiting for you! Rather, unlock Your account to start selling more.</p>
-<p>To unlock your account you need to pay for the order #{{id}} from {{ created }} in Your personal account by clicking on the link: <a href="{{url}}">{{url}}</a></p>
-<p>Do you have features you want to try but haven't set up yet? Write to us. We are happy only if with us you sell more!</p>
+<p>New Sales are waiting for You! Quickly unlock your account and start selling more.</p>
+<p>To unlock your account simply make a payment for your Invoice #{{id}} from {{ created }} in "My Account" by clicking on the link: <a href="{{url}}">{{url}}</a></p>
+<p>Are there features that you want to try but didn't have a chance to try yet? Write to us. We are happy only when you sell more with us!</p>   
 
 {% endblocktrans %}
 
