--- a/billing/templates/emails/comment_uncompleted.html
+++ b/billing/templates/emails/comment_uncompleted.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-{% trans "Uncompleted action" %}
+{% trans "Action not completed" %}
 {% endblock %}
 
 {% block content %}
