--- a/billing/templates/emails/order_payment_notification.html
+++ b/billing/templates/emails/order_payment_notification.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans "Order will expire soon" %}
+    {% trans "Invoice is due - don’t forget to extend your access!" %}
 {% endblock %}
 
 {% block content %}
@@ -12,9 +12,10 @@
 
     {{ greetings_new }}
 
-    <p>You need to pay order #{{ id }} from {{ created }} for using the "Maxbooking".</p>
-    <p>Payment must be made before {{ expired }}</p>
-    <p>You can view the order and make a payment in the personal cabinet of the  'Maxibooking' system by clicking on the link: {{ url }} </p>
+    <p>You Invoice #{{ id }} from {{ created }} is due.</p>
+    <p>Great opportunities and more Sales await. Don't forget to extend your access by paying you Invoice by {{ expired }}</p>
+    <p>To view your Invoice, update and confirm your subscription details, and pay online simply go to “My Account” by clicking on the link: {{ url }}</p>
+    <p>Are there features that you want to try but didn't have a chance to try yet? Write to us. We are happy only when you sell more with us!</p> 
 
 {% endblocktrans %}
 
