--- a/billing/templates/emails/sign.html
+++ b/billing/templates/emails/sign.html
@@ -1,9 +1,9 @@
 {% load i18n %}
 {% blocktrans %}
-    <p>Yours faithfully,<br>
-        Technical support 'Maxibooking'</p>
+    <p>Yours Faithfully,<br>
+        MaxiBooking Customer Support Team</p>
     <p>
         E-mail: <a href="mailto:support@maxi-booking.com">support@maxi-booking.com</a><br>
-        Knowledge base: <a href="https://support.maxi-booking.com">https://support.maxi-booking.com</a>
+        Knowledge Base: <a href="https://support.maxi-booking.com">https://support.maxi-booking.com</a>
     </p>
 {% endblocktrans %}
