add the fix for the dropdown menu in the tables

--- a/billing/static/css/admin/main.css
+++ b/billing/static/css/admin/main.css
@@ -141,3 +141,6 @@ body.change-list table#result_list thead th {
   position: sticky;
   top: 0;
 }
+.field-_row_actions {
+  position: relative;
+}
