--- a/billing/static/css/admin/main.less
+++ b/billing/static/css/admin/main.less
@@ -161,3 +161,8 @@ body.change-list {
         }
     }
 }
+
+//fix for the dropdown menu in tables
+.field-_row_actions {
+    position: relative;
+}
