--- a/billing/templates/emails/registration_fail.html
+++ b/billing/templates/emails/registration_fail.html
@@ -1,9 +1,9 @@
-{% extends 'emails/base.html' %}
+{% extends 'emails/base_client.html' %}
 {% load humanize %}
 {% load i18n %}
 
 {% block title %}
-    {% trans "Registation failure" %}
+{% trans "Registration failure" %}
 {% endblock %}
 
 {% block content %}
@@ -12,7 +12,5 @@
     <p>Looks like some part of the program has not been installed correctly.</p>
     <p>To resolve this, please contact Customer Support Team at: support@maxi-booking.com</p> 
 {% endblocktrans %}
-
-{% include "emails/sign.html" %}
 
 {% endblock %}
