--- a/billing/templates/emails/base.html
+++ b/billing/templates/emails/base.html
@@ -1,112 +1,259 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
+<html xmlns="http://www.w3.org/1999/xhtml" style="font-family: 'Lora', Georgia, Serif;
+	box-sizing: border-box; 
+	margin: 0;">
 
 <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Maxibooking</title>
-
-
+    <title>MaxiBooking</title>
+    <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat&display=swap" rel="stylesheet">
     <style type="text/css">
         img {
             max-width: 100%;
         }
-        
+
         body {
             -webkit-font-smoothing: antialiased;
             -webkit-text-size-adjust: none;
             width: 100% !important;
             height: 100%;
-            line-height: 1.6em;
-        }
-        
-        body {
+            line-height: 28px;
             background-color: #f6f6f6;
+            color: #333333;
         }
-        
-        @media only screen and (max-width: 640px) {
+
+        h1 {
+            font-size: 22px;
+            line-height: 28px;
+            margin: 35px 0 40px
+        }
+
+        h2 {
+            font-size: 28px;
+            line-height: 36px;
+            font-weight: 500;
+        }
+
+        h3 {
+            font-size: 16px line-height: 24px;
+            font-weight: bold;
+        }
+
+        a {
+            font-size: 14px;
+            line-height: 20px;
+        }
+
+        p {
+            margin: 10px 0;
+            font-family: 'Lora', Georgia, Serif;
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 26px;
+            color: #333333;
+        }
+
+        @media only screen and (max-width: 600px) {
+            table[class="mob-gmail-fix"] {
+                display: none !important;
+            }
+
             body {
                 padding: 0 !important;
+                margin-left: auto;
+                margin-right: auto;
             }
+
             h1 {
                 font-weight: 800 !important;
-                margin: 20px 0 5px !important;
-            }
-            h2 {
-                font-weight: 800 !important;
-                margin: 20px 0 5px !important;
-            }
-            h3 {
-                font-weight: 800 !important;
-                margin: 20px 0 5px !important;
-            }
-            h4 {
-                font-weight: 800 !important;
-                margin: 20px 0 5px !important;
-            }
-            h1 {
-                font-size: 22px !important;
-            }
-            h2 {
-                font-size: 18px !important;
-            }
-            h3 {
                 font-size: 16px !important;
             }
+
+            h2 {
+                font-weight: 800 !important;
+
+                font-size: 14px !important;
+            }
+
+            h3 {
+                font-weight: 800 !important;
+                margin: 20px 0 0 !important;
+                font-size: 12px !important;
+            }
+
+            h4 {
+                font-weight: 800 !important;
+                font-size: 12px !important;
+
+            }
+
+            p {
+                font-size: 12px !important;
+                line-height: 18px !important;
+                margin: 10px 0;
+                font-family: 'Lora', Georgia, Serif;
+                font-weight: normal;
+                color: #333333;
+            }
+
+            li {
+                font-size: 12px;
+                line-height: 18px;
+            }
+
+            a {
+                font-size: 12px !important;
+            }
+
+            .mobile-p {
+                font-size: 10px !important;
+                line-height: 14px !important;
+            }
+
+            .mobile-p a {
+                font-size: 10px !important;
+                line-height: 14px !important;
+            }
+
             .container {
-                padding: 0 !important;
+                padding: 10px !important;
                 width: 100% !important;
             }
+
             .content {
                 padding: 0 !important;
             }
+
             .content-wrap {
                 padding: 10px !important;
             }
+
             .invoice {
                 width: 100% !important;
             }
+
+            .header {
+                font-size: 6px !important;
+            }
+
+
+            .text-wrap {
+                padding: 20px 10px !important;
+            }
+
+            .text-wrap hr {
+                margin-top: 30px !important;
+                margin-bottom: 0px !important;
+            }
+
+            .support-column {
+                padding-left: 10px !important;
+            }
+
+
+            .contacts {
+                padding: 0px !important;
+            }
+
+            .left-column {
+                padding-left: 10px !important;
+                width: 50% !important;
+            }
+
+
+            .right-column {
+                padding-right: 10px !important;
+                width: 50% !important;
+            }
+
+            .contacts p {
+                font-size: 10px !important;
+            }
+
+            .contacts a {
+                font-size: 10px !important;
+            }
+
         }
     </style>
 </head>
 
-<body itemscope itemtype="http://schema.org/EmailMessage" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; width: 100% !important; height: 100%; line-height: 1.6em; background-color: #f6f6f6; margin: 0;" bgcolor="#f6f6f6">
-
-    <table class="body-wrap" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; background-color: #f6f6f6; margin: 0;" bgcolor="#f6f6f6">
-        <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-            <td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;" valign="top"></td>
-            <td class="container" width="600" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; display: block !important; max-width: 600px !important; clear: both !important; margin: 0 auto;" valign="top">
-                <div class="content" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; max-width: 600px; display: block; margin: 0 auto; padding: 20px;">
-                    <table class="main" width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; border-radius: 0px; background-color: #fff; margin: 0; border: 1px solid #e9e9e9;" bgcolor="#fff">
-                        <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-
-                            <td class="alert alert-warning" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 16px; vertical-align: top; color: #fff; font-weight: 500; text-align: center; border-radius: 0px 0px 0 0; background-color: #3c8dbc; margin: 0; padding: 20px;" align="center" bgcolor="#3c8dbc" valign="top">
-                                {% block title %}MaxiBooking{% endblock %}
-                            </td>
-
-                        </tr>
-                        <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                            <td class="content-wrap" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 20px;" valign="top">
-
-                                {% block content %}{% endblock %}
-
-                            </td>
-                        </tr>
-                    </table>
-                    <div class="footer" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; clear: both; color: #999; margin: 0; padding: 20px;">
-                        <table width="100%" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                            <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                                <td class="aligncenter content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 12px; vertical-align: top; color: #999; text-align: center; margin: 0; padding: 0 0 20px;" align="center" valign="top">
-
+<body itemscope itemtype="http://schema.org/EmailMessage" bgcolor="#f6f6f6" style="font-family: 'Lora', Georgia, Serif; 
+box-sizing: border-box; 
+font-size: 18px; 
+-webkit-font-smoothing: antialiased; 
+-webkit-text-size-adjust: none; 
+width: 100% !important; 
+min-width: 100%;
+height: 100%; 
+background-color: #f6f6f6; 
+margin: 0;">
+    <table cellpadding="0" cellspacing="0" border="0" width="700" style="width: 700px !important; min-width: 700px;" class="mob-gmail-fix">
+        <table style="font-family: 'Lora', Georgia, Serif;
+		box-sizing: border-box; 
+		width: 100%;
+		background-color: #f6f6f6;">
+            <tr>
+                <td class="container" width="680px" style="box-sizing: border-box; 
+				vertical-align: top; 
+				display: block !important; 
+				clear: both !important; 
+				margin: 0 auto;
+				padding: 0px;">
+                    <div class="content" style="box-sizing: border-box; 
+					display: block;
+					padding: 20px;">
+                        <table width="100%" cellpadding="0" cellspacing="0" style="box-sizing: border-box; 
+						margin: 0;
+						padding-top: 10px;">
+                            <tr>
+                                <td style="box-sizing: border-box; 
+								vertical-align: top;
+								width: 50%;
+								padding-bottom: 10px;">
+                                    <a href="https://maxi-booking.com/"><img src="https://mb-letter.s3-eu-west-1.amazonaws.com/logo.png" alt="Logotype" width="50%"></a>
+                                </td>
+                                <td style="
+								box-sizing: border-box; 
+								width: 50%;
+								padding-bottom: 10px;">
+                                    <p class="header" style="padding: 0px; 
+									margin: 0px; 
+									vertical-align: bottom; 
+									text-align: right;
+									color: #4F4F4F; 
+									font-family: 'Montserrat', Arial, sans-serif; 
+									font-size: 10px; 
+									line-height: 22px; 
+									font-weight: medium;">SOFTWARE FOR SHORT TERM RENTALS AND HOTELS</p>
                                 </td>
                             </tr>
+                            <tr>
+                                <td colspan="2" bgcolor="#96C828" style="padding-top: 4px;">
+                                    <img src="https://mb-letter.s3-eu-west-1.amazonaws.com/Group2.png" width="100%">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-wrap" colspan="2" style="background: #fff;
+								padding: 40px;
+								padding-bottom: 30px;">
+                                    <h1 style="margin: 0px;
+									font-family: 'Lora', Georgia, Serif;
+									font-weight: bold;
+									font-size: 22px;
+									line-height: 28px;
+									                             color: #333333;">{% block title %}MaxiBooking{% endblock %}</h1>
+
+                                    {% block content %}{% endblock %}
+                                </td>
+                            </tr>
+                            {% block sign %}{% endblock %}
+
                         </table>
                     </div>
-                </div>
-            </td>
-            <td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;" valign="top"></td>
-        </tr>
+                </td>
+            </tr>
+        </table>
     </table>
 </body>
-
-</html>
