--- a/billing/templates/emails/registration.html
+++ b/billing/templates/emails/registration.html
@@ -1,14 +1,13 @@
-{% extends 'emails/base.html' %}
+{% extends 'emails/base_client.html' %}
 {% load humanize %}
 {% load i18n %}
 
 {% block title %}
-    {% trans "Registration Successefull" %}
+{% trans "Registration Successefull" %}
 {% endblock %}
 
 {% block content %}
 {% blocktrans %}
-
     <p>Greetings!</p>
     <p>Welcome to 'MaxiBooking'! You are now well on your way to start selling more. </p>
     <p>To login to your account, please follow the link: {{ url }}
@@ -22,12 +21,7 @@
     <p>
         <a href="{{ website }}" class="btn-primary" itemprop="url" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 0px; text-transform: capitalize; background-color: #ff4632; margin: 0; border-color: #ff4632; border-style: solid; border-width: 10px 20px;">go to your website</a>
     </p>
-    <p>Don't hesitate to check out our Customer Support Knowledge Base for lots of guiding material that we have prepared for You: https://support.maxi-booking.com</p>
-    <p>Let us know what you think. We love to hear from You. For feedback and if you have any questions just send us an email at: support@maxi-booking.com</p>
     <p>We are happy only when you sell more with us!</p>
 
 {% endblocktrans %}
-
-{% include "emails/sign.html" %}
-
 {% endblock %}
